修改avatar路径为绝对路径

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <div id="main">
     <div id="avatar">
-      <img src="../imgs/avatar.jpg" alt="avatar">
+      <img src="/imgs/avatar.jpg" alt="avatar">
     </div>
     <p class="title">陈大喵的一亩三分地</p>
   </div>
